tests/negative/regression/r9.orng
const x : unreachable = 3